--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   unicons: ^3.0.0
   youtube_player_flutter: ^9.1.1
+  sqlite3: ^1.1.0
+  path_provider: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
