--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   path_provider: ^2.0.5
   sqflite: ^2.0.0+3
+  model_viewer_plus: ^1.9.1
+  permission_handler: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -94,3 +96,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
