--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   readmore: ^3.0.0
   intl: ^0.20.2
+  speech_to_text: ^6.6.0
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
